[package]
name = "ply"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
bon = "3.7"
camino = { version = "1.1", features = ["serde1"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0.0"
hex = "0.4.3"
htmd = "0.3.0"
regex = "1.11.2"
scraper = "0.24.0"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.11.0-rc.2"
shellexpand = "3.1.1"
toml = { version = "0.9", features = ["serde"] }
tu = "0.4"
ureq = "3.1"
url = { version = "2.5", features = ["serde"] }
serde_json = "1.0.143"
